force-app/main/default/objects/Customer_Onboarding__c/Customer_Onboarding__c.object-meta.xml
<CustomObject>
    <label>Customer Onboarding</label>
    <pluralLabel>Customer Onboardings</pluralLabel>
    <description>Customer Onboarding</description>
    <nameField>
        <label>Customer Onboarding Name</label>
        <type>AutoNumber</type>
        <displayFormat>ONB-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>