force-app/main/default/objects/Customer_Onboarding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
</CustomField>