force-app/main/default/objects/Customer_Onboarding__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <label>Submitted On</label>
    <type>Date</type>
    <description>Submitted On</description>
</CustomField>